--- a/roles/python2RH7/tasks/main.yml
+++ b/roles/python2RH7/tasks/main.yml
@@ -45,7 +45,8 @@
 #   scl enable python27 -- curl -O https://bootstrap.pypa.io/pip/2.7/get-pip.py
 #   scl enable python27 -- python get-pip.py
 #   scl enable python27 -- pip install --upgrade "pip < 21.0"
-    scl enable python27 -- pip install --upgrade pip < 21.0
+#   scl enable python27 -- pip install --upgrade pip < 21.0
+    scl enable python27 -- pip install --upgrade pip
 #   scl enable python27 bash 
 #   pip install --upgrade pip
   become: yes
