--- a/roles/python2RH7/tasks/main.yml
+++ b/roles/python2RH7/tasks/main.yml
@@ -28,7 +28,7 @@
 #    state: present
 
 - name: Get pip
-  shell: curl https://bootstrap.pypa.io/get-pip.py -o /tmp/get-pip.py --insecure
+  shell: curl https://bootstrap.pypa.io/pip/2.7/get-pip.py -o /tmp/get-pip.py --insecure
 
 ##  Validate certificate error encountered 
 #  get_url:
