--- a/roles/python2RH7/tasks/main.yml
+++ b/roles/python2RH7/tasks/main.yml
@@ -59,11 +59,11 @@
 #  become: yes
 #  become_method: sudo
 
-- name: SCL Enable Pip Install numpy, scipy
-  shell: |
-    scl enable python27 -- pip install numpy scipy 
-  become: yes
-  become_method: sudo
+#- name: SCL Enable Pip Install numpy, scipy
+#  shell: |
+#    scl enable python27 -- pip install numpy scipy 
+#  become: yes
+#  become_method: sudo
 
 #- name: Install pip
 #  easy_install:
