--- a/deploy_sasEnfPatchRH7-Cumulative-02.yml
+++ b/deploy_sasEnfPatchRH7-Cumulative-02.yml
@@ -67,7 +67,7 @@
 #   - pycharm7
 #   - gocd7
 #   - stattransfer14
-##  - r-studio-desktopRH7
+    - r-studio-desktopRH7
     - r-studio-serverRH7
     - r-studio-server-configRH7
     - r-shinyRH7
