--- a/deploy_sasEnfPatchRH7-Cumulative-02.yml
+++ b/deploy_sasEnfPatchRH7-Cumulative-02.yml
@@ -30,20 +30,20 @@
 #   - name: Install JAVA OpenJDK 1.8
 #     shell: yum install java-1.8.0-openjdk java-1.8.0-openjdk-devel -y
 
-    - name: Install R Patch packages
+#   - name: Install R Patch packages
 #     vars:
 #       do_r_install_packages: False
-      command: /usr/bin/Rscript --slave --no-save --no-restore-history -e "if (! ('{{ item }}' %in% installed.packages()[,'Package'])) { install.packages(pkgs='{{ item }}', INSTALL_opts=c('--no-test-load'),repos=c('http://cran.rstudio.com/'),dep=TRUE); print('Added'); } else { print('Already installed'); }"
-      with_items:
-        - sf
-        - units
-        - devtools
-      register: r_result
+#     command: /usr/bin/Rscript --slave --no-save --no-restore-history -e "if (! ('{{ item }}' %in% installed.packages()[,'Package'])) { install.packages(pkgs='{{ item }}', INSTALL_opts=c('--no-test-load'),repos=c('http://cran.rstudio.com/'),dep=TRUE); print('Added'); } else { print('Already installed'); }"
+#     with_items:
+#       - sf
+#       - units
+#       - devtools
+#     register: r_result
 #     failed_when: "r_result.rc != 0 or 'had non-zero exit status' in r_result.stderr"
 #     changed_when: "'Added' in r_result.stdout"
-      environment: "{{ r_env_vars }}"
-      tags:
-        - r
+#     environment: "{{ r_env_vars }}"
+#     tags:
+#       - r
 #     when: install_r_packages and do_r_install_packages
 
     - name: Ensure epel 7 is installed
@@ -205,21 +205,21 @@
 
 ##########################################################  R-Package Updates ##############################################################
 
-    - name: Install R packages
-      command: /usr/bin/Rscript --slave --no-save --no-restore-history -e "if (! ('{{ item }}' %in% installed.packages()[,'Package'])) { install.packages(pkgs='{{ item }}', INSTALL_opts=c('--no-test-load'),repos=c('http://cran.rstudio.com/'),dep=TRUE); print('Added'); } else { print('Already installed'); }"
-      with_items: "{{ r_packages }}"
-      register: r_result
-      failed_when: "r_result.rc != 0 or 'had non-zero exit status' in r_result.stderr"
-      changed_when: "'Added' in r_result.stdout"
+#   - name: Install R packages
+#     command: /usr/bin/Rscript --slave --no-save --no-restore-history -e "if (! ('{{ item }}' %in% installed.packages()[,'Package'])) { install.packages(pkgs='{{ item }}', INSTALL_opts=c('--no-test-load'),repos=c('http://cran.rstudio.com/'),dep=TRUE); print('Added'); } else { print('Already installed'); }"
+#     with_items: "{{ r_packages }}"
+#     register: r_result
+#     failed_when: "r_result.rc != 0 or 'had non-zero exit status' in r_result.stderr"
+#     changed_when: "'Added' in r_result.stdout"
 
-    - name: Install R packages with opts
+#   - name: Install R packages with opts
     # vars:
     #   do_r_install_w_opts: False
-      command: /usr/bin/Rscript --slave --no-save --no-restore-history -e "if (! ('{{ item.name }}' %in% installed.packages()[,'Package'])) { install.packages(pkgs='{{ item.name }}', configure.args='--with-{{ item.name }}-lib={{ item.lib }}, --with-{{ item.name }}-include={{ item.include}}', INSTALL_opts=c('--no-test-load'),repos=c('http://cran.rstudio.com/'),dep=TRUE); print('Added'); } else { print('Already installed'); }"
-      with_items: "{{ r_packages_with_opts }}"
-      register: r_result
-      failed_when: "r_result.rc != 0 or 'had non-zero exit status' in r_result.stderr"
-      changed_when: "'Added' in r_result.stdout"
+#     command: /usr/bin/Rscript --slave --no-save --no-restore-history -e "if (! ('{{ item.name }}' %in% installed.packages()[,'Package'])) { install.packages(pkgs='{{ item.name }}', configure.args='--with-{{ item.name }}-lib={{ item.lib }}, --with-{{ item.name }}-include={{ item.include}}', INSTALL_opts=c('--no-test-load'),repos=c('http://cran.rstudio.com/'),dep=TRUE); print('Added'); } else { print('Already installed'); }"
+#     with_items: "{{ r_packages_with_opts }}"
+#     register: r_result
+#     failed_when: "r_result.rc != 0 or 'had non-zero exit status' in r_result.stderr"
+#     changed_when: "'Added' in r_result.stdout"
     # environment: "{{ r_env_vars }}"
     # tags:
     #   - r
@@ -232,15 +232,15 @@
     # tags:
     #   - r
 
-    - name: Install R packages from Github
+#   - name: Install R packages from Github
     # vars:
     #   do_r_install_github: False
-      command: /usr/bin/Rscript --slave --no-save --no-restore-history -e "if (! ('{{ item.name }}' %in% installed.packages()[,'Package'])) { install.packages(pkgs='{{ item.name }}', repos=c('http://cran.rstudio.com/')); print('Added'); } else { print('Already installed'); }"
+#     command: /usr/bin/Rscript --slave --no-save --no-restore-history -e "if (! ('{{ item.name }}' %in% installed.packages()[,'Package'])) { install.packages(pkgs='{{ item.name }}', repos=c('http://cran.rstudio.com/')); print('Added'); } else { print('Already installed'); }"
     # command: /usr/bin/Rscript --slave --no-save --no-restore-history -e "library(devtools); if (! ('{{ item.name }}' %in% installed.packages()[,'Package'])) { install_github('{{ item.user }}/{{ item.name }}'); print('Added'); } else { print('Already installed'); }"
-      with_items: "{{ r_packages_github }}"
-      register: r_github_result
-      failed_when: "r_github_result.rc != 0 or 'had non-zero exit status' in r_github_result.stderr"
-      changed_when: "'Added' in r_github_result.stdout"
+#     with_items: "{{ r_packages_github }}"
+#     register: r_github_result
+#     failed_when: "r_github_result.rc != 0 or 'had non-zero exit status' in r_github_result.stderr"
+#     changed_when: "'Added' in r_github_result.stdout"
     # environment: "{{ r_env_vars }}"
     # tags:
     #   - r
